[gd_scene load_steps=32 format=2]

[ext_resource path="res://common/tex/cross.png" type="Texture" id=1]
[ext_resource path="res://game/level/Finish.tscn" type="PackedScene" id=2]
[ext_resource path="res://assets/theme/main_theme.tres" type="Theme" id=3]
[ext_resource path="res://assets/sounds/music/nitro_music.mp3" type="AudioStream" id=4]
[ext_resource path="res://game/level/terrain/ObjectSS2D_Mountain.tscn" type="PackedScene" id=5]
[ext_resource path="res://game/level/objects/GoalPillar.tscn" type="PackedScene" id=10]
[ext_resource path="res://assets/materials/ground_dirt.material" type="Material" id=11]
[ext_resource path="res://common/tex/noise/7547.jpg" type="Texture" id=14]
[ext_resource path="res://common/shader_rect/ShaderCanvasRect.tscn" type="PackedScene" id=16]
[ext_resource path="res://assets/materials/ground_linart.material" type="Material" id=17]
[ext_resource path="res://assets/materials/ground_dust.material" type="Material" id=19]
[ext_resource path="res://game/level/racing/BoltTracker.gd" type="Script" id=20]
[ext_resource path="res://game/level/StartPosition.tscn" type="PackedScene" id=21]
[ext_resource path="res://game/level/racing/StartLights.tscn" type="PackedScene" id=22]
[ext_resource path="res://common/shader_rect/ShaderTextureRect.tscn" type="PackedScene" id=23]
[ext_resource path="res://game/level/racing/LevelTrack.gd" type="Script" id=24]
[ext_resource path="res://game/level/tileset_level_objects.tres" type="TileSet" id=26]
[ext_resource path="res://game/levels/Level.gd" type="Script" id=27]
[ext_resource path="res://game/level/Checkpoint.tscn" type="PackedScene" id=45]
[ext_resource path="res://game/level/Navigation.gd" type="Script" id=46]
[ext_resource path="res://game/level/LevelEnvironment.tscn" type="PackedScene" id=48]
[ext_resource path="res://assets/turn_curves.png" type="Texture" id=49]
[ext_resource path="res://assets/theme/fonts/TTNorms/TTNorms-BlackItalic.ttf" type="DynamicFontData" id=51]

[sub_resource type="OpenSimplexNoise" id=10546]
seed = 7
octaves = 5
period = 208.6
persistence = 0.341
lacunarity = 2.1

[sub_resource type="NoiseTexture" id=10547]
width = 2000
height = 2000
seamless = true
noise = SubResource( 10546 )

[sub_resource type="GDScript" id=12611]
script/source = "
extends StaticBody2D


export var height: float = 50 setget _change_shape_height
export var elevation: float = 0

onready var object_shape: Node2D = $ObjectShapeSS2D
onready var collision_shape: CollisionPolygon2D = $CollisionPolygon2D



func _change_shape_height(new_height: float):

	height = new_height


func _on_ObjectShapeSS2D_on_dirty_update() -> void:

	$ShapeShadows.update_all_shadows()
"

[sub_resource type="NavigationPolygon" id=13453]
vertices = PoolVector2Array( -2520.2, -396.158, -2505, -4019, 3688, -3810, 3923, -2311, 3767, 3124, -2524, 511, -2662, 2917 )
polygons = [ PoolIntArray( 0, 1, 2, 3, 4, 5 ), PoolIntArray( 5, 4, 6 ) ]
outlines = [ PoolVector2Array( -2505, -4019, -2520.2, -396.158, -2524, 511, -2662, 2917, 3767, 3124, 3923, -2311, 3688, -3810 ) ]

[sub_resource type="RectangleShape2D" id=622]
extents = Vector2( 144, 4 )

[sub_resource type="Curve2D" id=13454]
_data = {
"points": PoolVector2Array( 0, 0, 0, 0, 0, 735, 0, 0, 0, 0, 138, -215, 0, 0, 0, 0, -69, -631, 0, 0, 0, 0, -525, -712, 365.587, 617.302, -365.587, -617.302, -1631, -1078, 0, 0, 0, 0, -1812, -2985, 0, 0, 0, 0, 1107, -3347, 0, 0, 0, 0, 3200, -2560, 0, 0, 0, 0, 2674, -797, 0, 0, 0, 0, 2776, 672, 0, 0, 0, 0, 2704, 1852, 0, 0, 0, 0, 582, 2368, 0, 0, 0, 0, -1761, 2422, 0, 0, 0, 0, -2049, 1247, 0, 0, 0, 0, -572, 869 )
}

[sub_resource type="DynamicFont" id=13452]
size = 100
extra_spacing_top = 16
font_data = ExtResource( 51 )

[sub_resource type="StyleBoxFlat" id=613]
bg_color = Color( 0.6, 0.6, 0.6, 0.294118 )
draw_center = false
border_width_left = 4
border_width_top = 4
border_width_right = 4
border_width_bottom = 4

[node name="Level" type="Node2D"]
script = ExtResource( 27 )
__meta__ = {
"_edit_vertical_guides_": [ 4078.0 ],
"_editor_description_": "Z INDEX
- background = -10
- ground terrain < -1
- flat objects and default = 0
- not flat or floating object = 1 - 9
- sky > 10"
}
level_finish_path = NodePath("Tracking/LevelFinish")
level_track_path = NodePath("Tracking/LevelTrack")

[node name="LevelOriginPosition" type="Position2D" parent="."]
rotation = -0.785397
__meta__ = {
"_edit_lock_": true,
"_gizmo_extents_": 500.0
}

[node name="Background" type="Node2D" parent="."]
z_index = -10

[node name="Background" type="ColorRect" parent="Background"]
visible = false
show_behind_parent = true
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 31.0
margin_top = 25.0
margin_right = 3031.0
margin_bottom = 2049.0
color = Color( 0.882353, 0.85098, 0.835294, 1 )

[node name="Background2" type="ColorRect" parent="Background"]
visible = false
show_behind_parent = true
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 31.0
margin_top = 25.0
margin_right = 3031.0
margin_bottom = 2049.0
color = Color( 0.882353, 0.85098, 0.835294, 1 )

[node name="Ground" type="Node2D" parent="."]
z_index = -1

[node name="BackColor" type="ColorRect" parent="Ground"]
show_behind_parent = true
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -3286.0
margin_top = -4981.0
margin_right = 4970.0
margin_bottom = 4203.0
color = Color( 0.490196, 0.443137, 0.423529, 1 )

[node name="ShaderCanvasRect_SidewalkDirt" parent="Ground" instance=ExtResource( 16 )]
visible = false
modulate = Color( 0.764706, 0.717647, 0.694118, 1 )
material = ExtResource( 11 )
margin_left = 4834.0
margin_top = 641.0
margin_right = 6915.0
margin_bottom = 2466.0

[node name="ShaderTextureRect_LineartTerrain" parent="Ground" instance=ExtResource( 23 )]
visible = false
material = ExtResource( 17 )
margin_left = 2554.0
margin_top = -1473.0
margin_right = 4554.0
margin_bottom = 527.0
texture = SubResource( 10547 )

[node name="ShaderTextureRect_Dust" parent="Ground" instance=ExtResource( 23 )]
visible = false
material = ExtResource( 19 )
margin_left = 1842.0
margin_top = -1513.0
margin_right = 3842.0
margin_bottom = 2215.0
texture = ExtResource( 14 )

[node name="Surfaces" type="Node2D" parent="."]

[node name="Terrain" type="Node2D" parent="."]

[node name="TerrainMountain" parent="Terrain" instance=ExtResource( 5 )]
position = Vector2( -1502, -9862 )
script = SubResource( 12611 )
height = 50.0

[node name="TerrainMountain2" parent="Terrain" instance=ExtResource( 5 )]
position = Vector2( -2022, -11181 )
script = SubResource( 12611 )
height = 50.0

[node name="Objects" type="Node2D" parent="."]
z_index = 1

[node name="Objects" type="TileMap" parent="Objects"]
position = Vector2( -3, 0 )
tile_set = ExtResource( 26 )
bake_navigation = true
format = 1
__meta__ = {
"_edit_lock_": true
}

[node name="Pickables" type="Node2D" parent="."]

[node name="Buiildings" type="Node2D" parent="."]

[node name="Tracking" type="Node" parent="."]

[node name="LevelNavigation" type="NavigationPolygonInstance" parent="Tracking"]
z_index = 10
navpoly = SubResource( 13453 )
script = ExtResource( 46 )
__meta__ = {
"_edit_lock_": true
}

[node name="PositionTarget" type="Position2D" parent="Tracking/LevelNavigation"]
scale = Vector2( 30, 30 )

[node name="CrossIndicator" type="Sprite" parent="Tracking/LevelNavigation/PositionTarget"]
modulate = Color( 0, 1, 0, 1 )
position = Vector2( 1, 1 )
scale = Vector2( 2, 2 )
texture = ExtResource( 1 )

[node name="LevelStart" type="Node2D" parent="Tracking"]
position = Vector2( 9, 23 )
__meta__ = {
"_edit_group_": true
}

[node name="StartLights" parent="Tracking/LevelStart" instance=ExtResource( 22 )]
position = Vector2( -7.62939e-06, -120 )

[node name="StartLine" type="Area2D" parent="Tracking/LevelStart"]
monitoring = false
monitorable = false
__meta__ = {
"_edit_group_": true
}

[node name="CollisionPolygon2D" type="CollisionShape2D" parent="Tracking/LevelStart/StartLine"]
visible = false
position = Vector2( 0, 4 )
shape = SubResource( 622 )
disabled = true

[node name="ColorRect" type="ColorRect" parent="Tracking/LevelStart/StartLine"]
margin_left = -496.0
margin_top = -24.0
margin_right = 496.0
margin_bottom = 24.0
grow_horizontal = 2

[node name="CameraPosition" type="Position2D" parent="Tracking/LevelStart"]

[node name="DriveInPosition" type="Position2D" parent="Tracking/LevelStart"]
position = Vector2( 0, 1024 )
__meta__ = {
"_edit_group_": true
}

[node name="Line2d" type="Line2D" parent="Tracking/LevelStart/DriveInPosition"]
position = Vector2( -72, 0 )
points = PoolVector2Array( -376, 0, 520, 0 )
default_color = Color( 1, 0, 1, 1 )

[node name="StartPositions" type="Node2D" parent="Tracking/LevelStart"]
modulate = Color( 1, 1, 1, 0.470588 )
position = Vector2( 0, 192 )

[node name="StartPosition1" parent="Tracking/LevelStart/StartPositions" instance=ExtResource( 21 )]
position = Vector2( -335, 5 )

[node name="StartPosition2" parent="Tracking/LevelStart/StartPositions" instance=ExtResource( 21 )]
position = Vector2( -104, 0 )

[node name="StartPosition3" parent="Tracking/LevelStart/StartPositions" instance=ExtResource( 21 )]
position = Vector2( 104, 0 )

[node name="StartPosition4" parent="Tracking/LevelStart/StartPositions" instance=ExtResource( 21 )]
position = Vector2( 312, 0 )

[node name="LevelTrack" type="Path2D" parent="Tracking"]
curve = SubResource( 13454 )
script = ExtResource( 24 )

[node name="BoltTracker" type="PathFollow2D" parent="Tracking/LevelTrack"]
position = Vector2( 0, 735 )
rotation = -1.42654
script = ExtResource( 20 )

[node name="CrossIndicator" type="Sprite" parent="Tracking/LevelTrack/BoltTracker"]
scale = Vector2( 30, 30 )
texture = ExtResource( 1 )

[node name="LevelFinish" parent="Tracking" instance=ExtResource( 2 )]

[node name="__BattleStartPositions" type="Node2D" parent="Tracking"]
visible = false
modulate = Color( 1, 1, 1, 0.470588 )
position = Vector2( 1152, 3392 )

[node name="StartPosition1" parent="Tracking/__BattleStartPositions" instance=ExtResource( 21 )]
position = Vector2( -312, 0 )

[node name="StartPosition2" parent="Tracking/__BattleStartPositions" instance=ExtResource( 21 )]
position = Vector2( -104, 0 )

[node name="StartPosition3" parent="Tracking/__BattleStartPositions" instance=ExtResource( 21 )]
position = Vector2( 104, 0 )

[node name="StartPosition4" parent="Tracking/__BattleStartPositions" instance=ExtResource( 21 )]
position = Vector2( 312, 0 )

[node name="tempGoalPillar" parent="Tracking" instance=ExtResource( 10 )]
position = Vector2( 1400, 1488 )
collision_layer = 9

[node name="Checkpoint" parent="Tracking" instance=ExtResource( 45 )]
position = Vector2( 2851, -1314 )
rotation = 0.551296

[node name="NCP" type="Node2D" parent="."]
z_index = 1

[node name="CameraLimits" type="Panel" parent="."]
margin_left = -3405.0
margin_top = -5159.0
margin_right = 4678.0
margin_bottom = 3825.0
theme = ExtResource( 3 )
__meta__ = {
"_edit_lock_": true
}

[node name="Sounds" type="Node" parent="."]

[node name="NitroMusic" type="AudioStreamPlayer" parent="Sounds"]
stream = ExtResource( 4 )
bus = "GameMusic"

[node name="WorldEnvironment" parent="." instance=ExtResource( 48 )]

[node name="__Labels" type="Node2D" parent="."]
position = Vector2( -4670, 34 )

[node name="Label4" type="Label" parent="__Labels"]
margin_left = 3996.0
margin_top = 549.0
margin_right = 5893.0
margin_bottom = 1642.0
theme = ExtResource( 3 )
custom_fonts/font = SubResource( 13452 )
text = "NAVODILA
- make unique
     - LevelNavigation
     - LevelTrack
- linija se more začet pred štartom (ai)
- poveži: camera limits, goals, track, finish"

[node name="_note" type="Label" parent="__Labels"]
margin_left = 5227.0
margin_top = -1359.0
margin_right = 5877.0
margin_bottom = -1056.0
theme = ExtResource( 3 )
text = "Z INDEX
- background = -10
- ground terrain < -1
- flat objects and default = 0
- not flat or floating object = 1 - 9
- sky > 10"

[node name="Label" type="Label" parent="__Labels"]
margin_left = 5234.0
margin_top = -971.0
margin_right = 6751.0
margin_bottom = -770.0
theme = ExtResource( 3 )
text = "Surfaces
- plain podlagi podaš SURFACE_TYPE za lastnosti
- plain podlaga je inherit parent (lahko tudi samo menjaš material v exportu)
- bolt zazna na kateri podlagi je in prilagodi vožnjo "

[node name="Label2" type="Label" parent="__Labels"]
margin_left = 5223.0
margin_top = -707.0
margin_right = 6633.0
margin_bottom = -464.0
theme = ExtResource( 3 )
text = "Čekpojnts
- player beleži prevožene čekpointe (čekpoint mu pošlje samo sebe)
- če je čekpoint že zabeležen za ta krog, se ne zgodi nič
- ko plejer prevozi ciljno črto, GM preveri, če so vsi čekpointi prevoženi"

[node name="Label3" type="Label" parent="__Labels"]
margin_left = 5227.0
margin_top = -413.0
margin_right = 6168.0
margin_bottom = -229.0
theme = ExtResource( 3 )
text = "Pikables
- ob pobiranju kliče na plejerju on item picked 
- pleyer aplicira posledice glede na PICKABLE"

[node name="TurnCurves" type="Sprite" parent="__Labels"]
position = Vector2( 5404.09, 99.3499 )
scale = Vector2( 0.552754, 0.552754 )
texture = ExtResource( 49 )

[node name="__ScreenSize" type="Panel" parent="."]
visible = false
modulate = Color( 0.952941, 0.356863, 0.498039, 1 )
margin_right = 2560.0
margin_bottom = 1440.0
custom_styles/panel = SubResource( 613 )
